--- a/TextrudeInteractive/InputMonacoPane.xaml
+++ b/TextrudeInteractive/InputMonacoPane.xaml
@@ -25,7 +25,7 @@
 
     <wv2:WebView2
       Name="WebView"
-      HorizontalAlignment="Stretch"
-      VerticalAlignment="Stretch" />
+      Width="1"
+      Height="1" />
   </DockPanel>
 </UserControl>
