--- a/TextrudeInteractive/OutputMonacoPane.xaml
+++ b/TextrudeInteractive/OutputMonacoPane.xaml
@@ -33,7 +33,7 @@
 
     <wv2:WebView2
       Name="WebView"
-      HorizontalAlignment="Stretch"
-      VerticalAlignment="Stretch" />
+      Width="1"
+      Height="1" />
   </DockPanel>
 </UserControl>
