--- a/TextrudeInteractive/Monaco/InputMonacoPane.xaml
+++ b/TextrudeInteractive/Monaco/InputMonacoPane.xaml
@@ -6,6 +6,7 @@
   xmlns:local="clr-namespace:TextrudeInteractive"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
+  xmlns:monaco="clr-namespace:TextrudeInteractive.Monaco"
   d:DesignHeight="450"
   d:DesignWidth="800"
   mc:Ignorable="d">
@@ -23,9 +24,6 @@
         IsSaveOnly="False" />
     </DockPanel>
 
-    <wv2:WebView2
-      Name="WebView"
-      Width="1"
-      Height="1" />
+    <monaco:MonacoEditPane x:Name="MonacoPane"/>
   </DockPanel>
 </UserControl>
