--- a/TextrudeInteractive/OutputPane.xaml
+++ b/TextrudeInteractive/OutputPane.xaml
@@ -18,7 +18,7 @@
 
             </StackPanel>
 
-            <local:FileBar x:Name="fileBar" DockPanel.Dock="Left" IsSaveOnly="True"/>
+            <local:FileBar x:Name="fileBar" DockPanel.Dock="Left"/>
         </DockPanel>
 
 
