--- a/TextrudeInteractive/MainWindow.xaml
+++ b/TextrudeInteractive/MainWindow.xaml
@@ -73,6 +73,8 @@
       <MenuItem Header="Inputs">
         <MenuItem Click="AddModel" Header="Add model" ToolTip="Adds a new model" />
         <MenuItem Click="RemoveModel" Header="Remove model" ToolTip="Removes the last model" />
+        <MenuItem Click="ToggleDefsAndIncludes" Header="Show/hide definitions and includes" />
+
         <Separator />
         <MenuItem Header="Reload linked" Click="ReloadAllInputs" ToolTip="Loads all inputs from linked files" />
         <MenuItem Header="Save linked" Click="SaveAllInputs" ToolTip="Saves all inputs back to linked files" />
