--- a/TextrudeInteractive/MainWindow.xaml
+++ b/TextrudeInteractive/MainWindow.xaml
@@ -76,8 +76,7 @@
       <MenuItem Header="Outputs">
         <MenuItem Click="AddOutput" Header="Add" ToolTip="Adds a new output" />
         <MenuItem Click="RemoveOutput" Header="Remove" ToolTip="Removes the last output" />
-        <MenuItem Click="RenameOutput" Header="Change name of output" ToolTip="Changes the name of the selected output"
-                  />
+        <MenuItem Click="RenameOutput" Header="Change name of output" ToolTip="Changes the name of the selected output" />
         <Separator />
         <MenuItem Header="Save linked" Click="SaveAllOutputs" ToolTip="Saves all outputs back to linked files" />
       </MenuItem>
@@ -92,13 +91,18 @@
       </MenuItem>
       <MenuItem Header="_Help">
         <MenuItem Header="Home page..." Click="ShowAbout" />
-        <MenuItem Header="Scriban language reference..." Click="ShowLanguageRef" />
+        <MenuItem Header="Scriban...">
+          <MenuItem Header="Language reference..." Click="ShowLanguageRef" />
+          <MenuItem Header="Built-ins..." Click="ShowBuiltIns" />
+        </MenuItem>
+        <Separator />
         <MenuItem Header="Send feedback">
           <MenuItem Header="Report a problem..." Click="NewIssue" />
-          <MenuItem Header="Send a &#x1f642; !" Click="SendASmile" />
           <MenuItem Header="Suggest a feature..." Click="NewIdea" />
-          <MenuItem Header="Ask a question..." Click="Questions" />
+          <Separator />
+          <MenuItem Header="Send a &#x1f642; !" Click="SendASmile" />
         </MenuItem>
+        <MenuItem Header="Textrude chat..." Click="GoGitter" />
       </MenuItem>
     </Menu>
     <DockPanel DockPanel.Dock="Bottom">
