Allow linked files to be relative or absolute. Implement nice command line builder

--- a/TextrudeInteractive/FileBar.xaml
+++ b/TextrudeInteractive/FileBar.xaml
@@ -11,7 +11,9 @@
 
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
             <Button  Name ="UnlinkButton"  Style="{StaticResource MaterialDesignFlatButton}" Click="UnlinkFile" ToolTip="Unlink file" Content="&#xa6;"/>
-            <Button  Name="LoadButton" Style="{StaticResource MaterialDesignFlatButton}" Click="Load"  Content="&#x21e7;" ToolTip="Load" />
+            <Button  Name ="AbsRelButton"  Style="{StaticResource MaterialDesignFlatButton}" Click="ToggleAbsRel" ToolTip="Absolute/Relative path" Content=""/>
+
+<Button  Name="LoadButton" Style="{StaticResource MaterialDesignFlatButton}" Click="Load"  Content="&#x21e7;" ToolTip="Load" />
             <Button  Name="SaveButton" Style="{StaticResource MaterialDesignFlatButton}" Click="Save"  Content="&#x21e9;" ToolTip="Save" />
             <Button
               Name="CopyToClipboardButton"
