--- a/TextrudeInteractive/MainWindow.xaml
+++ b/TextrudeInteractive/MainWindow.xaml
@@ -7,6 +7,7 @@
                          mc:Ignorable="d"
                          Title="Textrude Interactive" Height="800" Width="1000"
                          Closing="MainWindow_OnClosing"
+                         TitleBarIcon="{StaticResource AppIcon}"
                          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                          TextElement.Foreground="{DynamicResource MaterialDesignBody}"
                          TextElement.FontWeight="Regular"
