--- a/TextrudeInteractive/Monaco/MonacoEditPane.xaml
+++ b/TextrudeInteractive/Monaco/MonacoEditPane.xaml
@@ -9,10 +9,13 @@
              d:DesignHeight="450" d:DesignWidth="800"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              >
-    <Grid>
-      <ProgressBar IsIndeterminate="True" Style="{StaticResource MaterialDesignCircularProgressBar}"/>
+  <Grid Background ="#1E1E1E">
+   
+
+    <ProgressBar Name="Spinner"  IsIndeterminate="True" Style="{StaticResource MaterialDesignCircularProgressBar}"/>
       <wpf:WebView2
-      Name="WebView" Width="0" Height="0"
+      Name="WebView" DefaultBackgroundColor ="#1E1E1E" Width="0" Height="0"
+    
       />
   </Grid>
 </UserControl>
